fixed navbar z-index

--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,7 @@ html {
   position: fixed;
   top: 0;
   width: 100%;
+  z-index: 1;
 }
 
 #navbar a {
